--- a/style.css
+++ b/style.css
@@ -87,42 +87,39 @@ h2 {
 .modal {
     display: none;
     position: fixed;
-    z-index: 1000;
-    padding-top: 60px;
+    z-index: 10;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
-    overflow: auto;
-    background-color: rgba(0, 0, 0, 0.9);
+    background-color: rgba(0, 0, 0, 0.8);
+    justify-content: center;
+    align-items: center;
 }
 
 .modal-content {
+    max-width: 90%;
+    max-height: 90%;
     margin: auto;
     display: block;
-    width: 80%;
-    max-width: 700px;
+    border-radius: 8px;
 }
 
 #caption {
-    margin: auto;
-    display: block;
-    width: 80%;
-    max-width: 700px;
+    color: white;
     text-align: center;
-    color: #ccc;
-    padding: 10px 0;
-    height: 150px;
+    padding: 10px;
+    font-size: 1.2rem;
 }
 
 .close {
     position: absolute;
-    top: 15px;
-    right: 35px;
-    color: #f1f1f1;
-    font-size: 40px;
+    top: 10px;
+    right: 20px;
+    color: white;
+    font-size: 30px;
     font-weight: bold;
-    transition: 0.3s;
+    cursor: pointer;
 }
 
 .close:hover,
