--- a/style.css
+++ b/style.css
@@ -17,8 +17,19 @@ h2 {
     padding: 20px;
     text-align: center;
     max-width: 300px;
-    flex-basis: calc(33% - 40px); /* Adjust the basis to make it 3 columns */
     box-sizing: border-box;
+}
+
+@media (max-width: 768px) {
+    .work-card {
+        flex-basis: calc(50% - 40px);
+    }
+}
+
+@media (max-width: 480px) {
+    .work-card {
+        flex-basis: calc(100% - 40px);
+    }
 }
 
 .work-image {
@@ -87,40 +98,46 @@ h2 {
 .modal {
     display: none;
     position: fixed;
-    z-index: 10;
+    z-index: 1000;
+    padding-top: 60px;
     left: 0;
-    right: 0;
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.8);
-    justify-content: center;
-    align-items: center;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.9);
+
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    /* モーダル表示時のfade in, fade out */
 }
 
 .modal-content {
-    max-width: 90%;
-    max-height: 90%;
     margin: auto;
     display: block;
-    border-radius: 8px;
+    width: 80%;
+    max-width: 700px;
 }
 
 #caption {
-    color: white;
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
     text-align: center;
-    padding: 10px;
-    font-size: 1.2rem;
+    color: #ccc;
+    padding: 10px 0;
+    height: 150px;
 }
 
 .close {
     position: absolute;
-    top: 10px;
-    right: 20px;
-    color: white;
-    font-size: 30px;
+    top: 15px;
+    right: 35px;
+    color: #f1f1f1;
+    font-size: 40px;
     font-weight: bold;
-    cursor: pointer;
+    transition: 0.3s;
 }
 
 .close:hover,
