--- a/style.css
+++ b/style.css
@@ -17,7 +17,15 @@ h2 {
     padding: 20px;
     text-align: center;
     max-width: 300px;
+    flex-basis: calc(33% - 40px);
     box-sizing: border-box;
+    text-decoration: none;
+    color: inherit;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    cursor: pointer;
 }
 
 @media (max-width: 768px) {
@@ -38,7 +46,7 @@ h2 {
     border-radius: 5px;
 }
 
-.work-button {
+/* .work-button {
     display: inline-block;
     margin-top: 10px;
     padding: 10px 20px;
@@ -47,12 +55,16 @@ h2 {
     text-decoration: none;
     border-radius: 5px;
     transition: background-color 0.3s ease;
-}
+} */
 
-.work-button:hover {
+/* .work-button:hover {
     background-color: #5a0cac;
-}
+} */
 
+.work-card:hover {
+    transform: scale(1.05);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+}
 
 
 .gallery {
