--- a/style.css
+++ b/style.css
@@ -116,12 +116,16 @@ h2 {
     top: 0;
     width: 100%;
     height: 100%;
-    overflow: auto;
     background-color: rgba(0, 0, 0, 0.9);
 
     opacity: 0;
     transition: opacity 0.3s ease;
     /* モーダル表示時のfade in, fade out */
+}
+
+.modal.show {
+    display: flex;
+    opacity: 1;
 }
 
 .modal-content {
